--- a/Red.html
+++ b/Red.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Sadie Review</title>
+		<title>All Systems Red Review</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -48,51 +48,19 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Sadie by Courtney Summers</h1>
+							<h1>All Systems Red by Martha Wells</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
 							
                             <section class="basics">
-							    <p> April 7, 2023 - April 14, 2023 </p>
-							    <p>*4</p>
+							    <p> June 8, 2023 </p>
+							    <p>*3.5</p>
 							    <p> Audiobook </p>
-							    <p> Crime, Mystery/Thriller, Contemporary </p>
+							    <p> Adult, SciFi, </p>
                             </section>
 
                             <section class="review">
                                 <h2>Review</h2>
-                                    <p>I’m not quite sure how to begin with this book. It’s powerful and heavy 
-                                    and so vastly different from what I thought it was going to be. And I 
-                                    know this is going to sit with me for a long time.</p>
-
-                                    <p>This book is described like a mystery, but it’s really not about that at 
-                                    all. At least not in the way I think of traditional mysteries. The 
-                                    narrative is told from the perspective of Sadie, searching for her 
-                                    little sister Mattie’s killer, and from Wes McCray, a podcast journalist 
-                                    who has picked up Sadie’s story after she has gone missing. The general 
-                                    whodunit and why that I was expecting isn’t really a part of it. Sadie 
-                                    knows what happened (even if it takes a while for her to explain that 
-                                    to us) and Wes’ investigation is largely parallel and two steps behind 
-                                    Sadie’s journey. Rather, the focus is on the sisters’ relationship: how 
-                                    much Sadie loves Mattie as well as the things she is willing to do for 
-                                    that love because no one else will.</p>
-
-                                    <p>I was not prepared for the monster Keith/Darren/Jack was. (Seriously 
-                                    check the content warnings. I was caught off guard and even more 
-                                    unsettled because of it). So much of Sadie’s journey involves the effects 
-                                    and reactions to his abuse, which is never fully described on the page. 
-                                    Instead we get disturbing flashback scenes of creepy behavior, the 
-                                    emotional turmoil of the evidence he and Silas kept, as well as testimonies 
-                                    from a host of characters who thought they were great guys. All of that 
-                                    makes this so much more real because “girls go missing all the time” but 
-                                    rarely are we forced into the true aftermath of these stories.</p>
-                                    
-                                    <details>
-                                        <summary>Vague Spoilers</summary>
-                                            <p>There was no other way to end this book. Apparently the ending 
-                                            is contentious, and I get that because usually such an open-ending 
-                                            feels unfinished and unsatisfying, but it would have hurt the story 
-                                            to do things differently.</p>
-                                    </details>
+                                    <p>It’s been so long since I’ve read Sci-fi but this novella reminds me why I love it! All Systems Red is a short and fun adventure about exasperated Murderbot who has sadly been overcome with feelings for his dumb human clients and has to protect them rather than hiding in his room and binging. Sanctuary Moon. Murderbot’s deadpan and pessimistic narration brought a lot of humor to the story, though I was led to believe there might be a little more depth to the story. After looking at the synopsis for the next novella, I think that idea was more applied to the series as a whole rather than the first part. So slightly disappointed that it wasn't in this one but that just means I’m even more excited for the next one. (A pleasant surprise since I haven’t been able to commit to a full-length series since pre-pandemic).</p>
 
                             </section>
 
