--- a/Archive.html
+++ b/Archive.html
@@ -68,7 +68,7 @@
 								<li>H is for Hawk</li>-->
 								<li><a href="main-reviews/1-inheritance.html">The Inheritance Games</a></li>
 								<li><a href="main-reviews/2-cemetery.html">Cemetery Boys</a></li>
-								<li>All Systems Red</li>
+								<li><a href="Red.html">All Systems Red</li>
 								<li><a href="main-reviews/3-cerulean.html">The House in the Cerulean Sea</a></li>
 								<li>Caraval</li>
 								<li>Legendary</li>
