--- a/Archive.html
+++ b/Archive.html
@@ -71,7 +71,7 @@
 								<li><a href="Red.html">All Systems Red</li>
 								<li><a href="main-reviews/3-cerulean.html">The House in the Cerulean Sea</a></li>
 								<li><a href="caraval.html">Caraval</li>
-								<li>Legendary</li>
+								<li><a href="legendary.html">Legendary</li>
 								<li><a href="main-reviews/4-rwrb.html">Red, White & Royal Blue</a></li>
 								<li><a href="main-reviews/5-whispering.html">Under the Whispering Door</a></li>
 								<li>Artificial Condition</li>
