--- a/artificial.html
+++ b/artificial.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Legendary Review</title>
+		<title>Artificial Condition Review</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -48,36 +48,35 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Legendary by Stephanie Garber</h1>
+							<h1>Artificial Condition by Martha Wells</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
 							
                             <section class="basics">
-							    <p>June 13, 2023 - June 21, 2023 </p>
-							    <p>Original Rating (2019): *5</p>
-                                <p>Re-Read (2023): *4</p>
+							    <p>June 29, 2023 </p>
+							    <p>Rating: *3</p>
 							    <p> Audiobook </p>
-							    <p> YA, Fantasy, Romance </p>
+							    <p> Adult, SciFi, Novella </p>
                             </section>
 
                             <section class="review">
                                 <h2>Review</h2>
-                                    <p>The sequel is better! Legendary holds all the magic of the first book 
-                                    while further fleshing out the world, the plot, and the game. I love the 
-                                    addition of the Fates and Paloma’s Deck of Destiny, which really added to 
-                                    the lore and created a new level of myth and magic to the world. Tella also 
-                                    gets so much more development! More than just the reckless little sister 
-                                    that Scarlett has to always look out for, Tella’s got plans and schemes. 
-                                    She knows what she wants and she never feels like a passive character or 
-                                    someone that stuff just happens too, like Scarlett did. Also, Caraval felt 
-                                    like an actual game this time with legitimate clues & progress instead of 
-                                    endless reveals that make characters question their reality. The endless 
-                                    ruminations on Legend’s identity got a bit annoying because you get 
-                                    multiple hints & near confirmations before the “official” reveal, though. 
-                                    </p>
+                                    <p>The adventures of Murderbot continues with more reckless humans trying 
+                                    to get themselves plus the addition of another media-obsessed construct in 
+                                    the form of ship AI ART (Asshole Research Transport) who is the smartest 
+                                    being in the room and will bully you into friendship and making better 
+                                    choices. This was a fun side quest for Murderbot, but not quite as 
+                                    enjoyable as the first. We see a lot more development in terms of the 
+                                    various constructs that exist as well as their relationships to the humans 
+                                    they work for, their purpose, and their freedom/autonomy. However, I 
+                                    thought this novella was going to focus more on Murderbot’s murderous 
+                                    backstory. While their investigation is the entire reason they get 
+                                    involved, it’s only a small blip in the overall storyline. We get a play- 
+                                    by-play analysis of what happened through the recovered data, but I 
+                                    expected more given this incident is Murderbot’s origin and the root of all 
+                                    their anxieties.</p>
 
-                                    <p>I’m super excited to finally finish the series and see how all the 
-                                    new twists/changes to the world turn out in the last book. And hopefully 
-                                    get to see a mix of both Scarlett & Tella’s stories.</p>
+                                    <p>It’s not what I was hoping for, but I’m still excited for the next 
+                                    installment.</p>
                             </section>
 
 						</div>
