--- a/Archive.html
+++ b/Archive.html
@@ -74,11 +74,11 @@
 								<li><a href="legendary.html">Legendary</li>
 								<li><a href="main-reviews/4-rwrb.html">Red, White & Royal Blue</a></li>
 								<li><a href="main-reviews/5-whispering.html">Under the Whispering Door</a></li>
-								<li>Artificial Condition</li>
+								<li><a href="artificial.html">Artificial Condition</li>
 								<li><a href="main-reviews/6-sunbearer.html">The Sunbearer Trials</a></li>
 								<li><a href="main-reviews/7-katzenjammer.html">Katzenjammer</a></li>
 								<li><a href="main-reviews/8-neverwoods.html">Lost in the Never Woods</a></li>
-								<li><a href="main-reviews/9-girl.html">The Girl Who Fell Beneath the Seas</a></li>
+								<li><a href="main-reviews/9-girl.html">The Girl Who Fell Beneath the Sea</a></li>
 								<li><a href="main-reviews/10-rot.html">Together We Rot</a></li>
 								<li><a href="main-reviews/11-hide.html">Hide</a></li>
 								<li><a href="main-reviews/12-hallowe'en.html">Hallowe'en Party</a></li>
