--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 									<a href="main-reviews/5-whispering.html">
 										<h2>Under the Whispering Door</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>When Wallace Price encounters Hugo the Ferryman, he realizes he isn't ready to pass on to the afterlife, but to truly live and enjoy life.</p>
 										</div>
 									</a>
 								</article>
@@ -117,7 +117,7 @@
 										<h2>The Sunbearer Trials</h2>
 										<div class="content">
 											<!--Seriously cut down on this one. Too long for the cellphone view-->								
-											<p><em> Percy Jackson</em> meets <em> The Hunger Games</em>, in this Mexican-influenced fantasy. Teo is a Jade semidiose son of Quetzal, the semidiosa of birds. As a Jade he will never amount to much beyond a public figure within his home city of Quetzlan, not like the Golds who become heroes renowned around... <!--insert name of world here-->But this year is the Sunbearer Trials and for the first time two Jades have been chosen to compete. Navigating a world he was never meant to be part of and a competition he was not prepared, Teo must keep his friends alive because while the winner is honored as Sunbearer, the loser is sacrificed to fuel Sol's protection for another decade.</p>
+											<p>As a Jade semidiose, Teo is not expected to amount to much. But when he is chosen for the Sunbearer Trials, he must ensure that he and his friends do not become the next sacrifice.</p>
 										</div>
 									</a>
 								</article>
@@ -129,7 +129,7 @@
 										<h2>Katzenjammer</h2>
 										<div class="content">
 											<!--Description too long for phone view (when the boxes are much thinner)-->
-											<p>In this dark horror novel, Cat is desperately searching for a way to escape School. For as long as she can remember, she and her classmates have been trapped inside the living, breathing entity that is School. No one enters, no one leaves, and those unfortuante enough to be outcast have started changing. As more and more transformed are found in pieces, Cat will have to face the truth of her past in order to save herself from the same fate.</p>
+											<p>For as long as Cat can remember, she and her classmates have been trapped inside the living School. As more and more transformed students are found in pieces, Cat will have to face the truth of her past in order to save herself from the same fate.</p>
 										</div>
 									</a>
 								</article>
@@ -174,7 +174,7 @@
 									<a href="main-reviews/11-hide.html">
 										<h2>Hide</h2>
 										<div class="content">
-											<p>A supernatural thriller, this Kiersten White novel follows the unwitting contestants of a Hide and Seek contest within an abandoned amusement park. But as more people are found, they start to question who or <em>what</em> is hunting them and have contestants been eliminated <em> permanently</em>?</p>
+											<p>A supernatural thriller, this Kiersten White novel follows the 												unwitting contestants of a Hide and Seek contest within an 														abandoned amusement park. But as more people are found, they start 												to question who or <em>what</em> is hunting them and have 														contestants been eliminated <em> permanently</em>?</p>
 										</div>
 									</a>
 								</article>
@@ -185,7 +185,8 @@
 									<a href="main-reviews/12-hallowe'en.html">
 										<h2>Hallowe'en Party</h2>
 										<div class="content">
-											<p>Regarded as one of her darkest mysteries, this Agatha Christie novel follows Hercule Poirot as he investigates the murder of young Joyce Reynolds, who was drowned in a bucket of apples. This novel is the inspiration for <em>A Haunting in Venice</em>.</p>
+											<p>Regarded as one of her darkest mysteries, this Agatha Christie 
+											novel follows Hercule Poirot as he investigates the murder of young 											Joyce Reynolds, who was drowned in a bucket of apples. This novel 												is the inspiration for <em>A Haunting in Venice</em>.</p>
 										</div>
 									</a>
 								</article>
