--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
 							<header>
 								<h1>This is Phantom, a free, fully responsive site<br />
 								template designed by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+								
 								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p>
 							</header>
+							
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
@@ -61,7 +63,7 @@
 									<a href="main-reviews/1-inheritance.html">
 										<h2>The Inheritance Games</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>When a reclusive billionaire leaves her all his money, Avery becomes entangled in the riddles Tobias Hawthorne left behind--and the eyes of his grandsons.</p>
 										</div>
 									</a>
 								</article>
@@ -72,7 +74,7 @@
 									<a href="main-reviews/2-cemetery.html">
 										<h2>Cemetery Boys</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>In order to prove himself a real brujo, Yadriel performs a summonging ceremony in secret, but he summons the wrong ghost and bad boy Julian refuses to pass on quietly.</p>
 										</div>
 									</a>
 								</article>
@@ -83,7 +85,8 @@
 									<a href="main-reviews/3-cerulean.html">
 										<h2>The House in the Cerulean Sea</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<!--One line too long. Change in CSS-->
+											<p>By-the-book case worker Linus Baker has been assigned to investigate a magical orphanage and determine if the children may bring about the end of the world.</p>
 										</div>
 									</a>
 								</article>
@@ -94,7 +97,8 @@
 									<a href="main-reviews/4-rwrb.html">
 										<h2>Red, White & Royal Blue</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<!--One line too long-->
+											<p>After causing an international PR nightmare, First Son Alex is forced to play nice with Prince Henry of England, but their blossoming relationship could cause problems for both of their countries.</p>
 										</div>
 									</a>
 								</article>
@@ -116,8 +120,8 @@
 									<a href="main-reviews/6-sunbearer.html">
 										<h2>The Sunbearer Trials</h2>
 										<div class="content">
-											<!--Seriously cut down on this one. Too long for the cellphone view-->								
-											<p>As a Jade semidiose, Teo is not expected to amount to much. But when he is chosen for the Sunbearer Trials, he must ensure that he and his friends do not become the next sacrifice.</p>
+											<!--Too long-->
+											<p>As a Jade semidiose, not much is expected of Teo. But when he is chosen for the Sunbearer Trials, he must ensure that he and his friends don't become the next sacrifice.</p>
 										</div>
 									</a>
 								</article>
@@ -128,8 +132,7 @@
 									<a href="main-reviews/7-katzenjammer.html">
 										<h2>Katzenjammer</h2>
 										<div class="content">
-											<!--Description too long for phone view (when the boxes are much thinner)-->
-											<p>For as long as Cat can remember, she and her classmates have been trapped inside the living School. As more and more transformed students are found in pieces, Cat will have to face the truth of her past in order to save herself from the same fate.</p>
+											<p>Cat and her classmates have been trapped in School and changed into something else. As more and more students are found in pieces, Cat will have to face the truth of her past in order to save herself from the same fate.</p>
 										</div>
 									</a>
 								</article>
@@ -140,7 +143,8 @@
 									<a href="main-reviews/8-neverwoods.html">
 										<h2>Lost in the Never Woods</h2>
 										<div class="content">
-											<p>A modern retelling of Peter Pan, Aiden Thomas' sophomore novel centers on a Wendy Darling still reeling from her brothers' disappearnce five years ago and the memories she can't recall. When more kids go missing, a mysterious boy claims she is the only one with the power to find them.</p>
+											<!--Slighlty too long-->
+											<p>Wendy Darling is still reeling from her brothers' five year disappearnce and the memories she can't recall. When more kids disappear, a mysterious boy claims she is the only one who can find them.</p>
 										</div>
 									</a>
 								</article>
@@ -151,8 +155,8 @@
 									<a href="main-reviews/9-girl.html">
 										<h2>The Girl Who Fell Beneath the Sea</h2>
 										<div class="content">
-											<!--Re-word and shorten this descriptoin-->
-											<p>An ode to (look up original folktale), Mina takes the place of the Sea God's Bride to appease his wrath and save her brother's true love. But upon entering the spirit world, she discoves the Sea God under a cursed sleep, leaving the ocean to ravage her country in his absence. It is up to Mina and her new friends to break the curse and end her people's suffering.</p>
+											<!--Still too long.-->
+											<p>To appease the Sea God's wrath and save her brother's beloved, Mina tosses herself into the sea. But when she discovers the god under a cursed sleep, it is up to Mina to break the curse and end her people's suffering.</p>
 										</div>
 									</a>
 								</article>
@@ -163,7 +167,7 @@
 									<a href="main-reviews/10-rot.html">
 										<h2>Together We Rot</h2>
 										<div class="content">
-											<p>In Skyla Arndt's debut paranormal romance, Wil teams up with her ex-best friend Elwood to investigate her mother's disappearance and uncover the secrets behind his family's church: The Garden of Adam. But the Morguewood grows hungry, and Elwood may be their next sacrifice.</p>
+											<p>Wil teams up with her ex-friend Elwood to uncover the secrets behind his family's church: The Garden of Adam. But the Morguewood grows hungry, and Elwood may be their next sacrifice.</p>
 										</div>
 									</a>
 								</article>
@@ -174,7 +178,8 @@
 									<a href="main-reviews/11-hide.html">
 										<h2>Hide</h2>
 										<div class="content">
-											<p>A supernatural thriller, this Kiersten White novel follows the 												unwitting contestants of a Hide and Seek contest within an 														abandoned amusement park. But as more people are found, they start 												to question who or <em>what</em> is hunting them and have 														contestants been eliminated <em> permanently</em>?</p>
+											<!--Again mess with CSS-->
+											<p>Contestants compete in a Hide & Seek contest at an abandoned amusement park. But as the days progress, they start to question who or what is hunting them and have contestants been eliminated permanently?</p>
 										</div>
 									</a>
 								</article>
@@ -185,8 +190,7 @@
 									<a href="main-reviews/12-hallowe'en.html">
 										<h2>Hallowe'en Party</h2>
 										<div class="content">
-											<p>Regarded as one of her darkest mysteries, this Agatha Christie 
-											novel follows Hercule Poirot as he investigates the murder of young 											Joyce Reynolds, who was drowned in a bucket of apples. This novel 												is the inspiration for <em>A Haunting in Venice</em>.</p>
+											<p>Regarded as one of her darkest mysteries, this Agatha Christie novel follows Hercule Poirot as he investigates the murder of a young girl drowned in a bucket of apples.</p>
 										</div>
 									</a>
 								</article>
