archive-review file and updated CSS links
Created file for all my reviews that are in the archive, updated the links to all my CSS sheets within those files, and changed file names so all are lowercase

--- a/archive-reviews/legendary.html
+++ b/archive-reviews/legendary.html
@@ -6,11 +6,11 @@
 -->
 <html>
 	<head>
-		<title>All Systems Red Review</title>
+		<title>Legendary Review</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="../assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
+									<span class="symbol"><img src="../images/logo.svg" alt="" /></span><span class="title">Phantom</span>
 								</a>
 
 							<!-- Nav -->
@@ -48,20 +48,36 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>All Systems Red by Martha Wells</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
+							<h1>Legendary by Stephanie Garber</h1>
+							<span class="image main"><img src="../images/pic13.jpg" alt="" /></span>
 							
                             <section class="basics">
-							    <p> June 8, 2023 </p>
-							    <p>*3.5</p>
+							    <p>June 13, 2023 - June 21, 2023 </p>
+							    <p>Original Rating (2019): *5</p>
+                                <p>Re-Read (2023): *4</p>
 							    <p> Audiobook </p>
-							    <p> Adult, SciFi, </p>
+							    <p> YA, Fantasy, Romance </p>
                             </section>
 
                             <section class="review">
                                 <h2>Review</h2>
-                                    <p>It’s been so long since I’ve read Sci-fi but this novella reminds me why I love it! All Systems Red is a short and fun adventure about exasperated Murderbot who has sadly been overcome with feelings for his dumb human clients and has to protect them rather than hiding in his room and binging. Sanctuary Moon. Murderbot’s deadpan and pessimistic narration brought a lot of humor to the story, though I was led to believe there might be a little more depth to the story. After looking at the synopsis for the next novella, I think that idea was more applied to the series as a whole rather than the first part. So slightly disappointed that it wasn't in this one but that just means I’m even more excited for the next one. (A pleasant surprise since I haven’t been able to commit to a full-length series since pre-pandemic).</p>
+                                    <p>The sequel is better! Legendary holds all the magic of the first book 
+                                    while further fleshing out the world, the plot, and the game. I love the 
+                                    addition of the Fates and Paloma’s Deck of Destiny, which really added to 
+                                    the lore and created a new level of myth and magic to the world. Tella also 
+                                    gets so much more development! More than just the reckless little sister 
+                                    that Scarlett has to always look out for, Tella’s got plans and schemes. 
+                                    She knows what she wants and she never feels like a passive character or 
+                                    someone that stuff just happens too, like Scarlett did. Also, Caraval felt 
+                                    like an actual game this time with legitimate clues & progress instead of 
+                                    endless reveals that make characters question their reality. The endless 
+                                    ruminations on Legend’s identity got a bit annoying because you get 
+                                    multiple hints & near confirmations before the “official” reveal, though. 
+                                    </p>
 
+                                    <p>I’m super excited to finally finish the series and see how all the 
+                                    new twists/changes to the world turn out in the last book. And hopefully 
+                                    get to see a mix of both Scarlett & Tella’s stories.</p>
                             </section>
 
 						</div>
@@ -106,11 +122,11 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="../assets/js/jquery.min.js"></script>
+			<script src="../assets/js/browser.min.js"></script>
+			<script src="../assets/js/breakpoints.min.js"></script>
+			<script src="../assets/js/util.js"></script>
+			<script src="../assets/js/main.js"></script>
 
 	</body>
 </html>
