Added Caraval image
Caraval image

--- a/archive-reviews/caraval.html
+++ b/archive-reviews/caraval.html
@@ -49,7 +49,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Caraval by Stephanie Garber</h1>
-							<span class="image main"><img src="../images/pic13.jpg" alt="" /></span>
+							<span class="image main"><img src="../images/caraval.jpg" alt="" /></span>
 							
                             <section class="basics">
 							    <p>June 12, 2023 - June 13, 2023 </p>
