Archive review links and Legendary image
Edited links to archive reviews on the review archive page to reflect the change in file location

Also added an file for Legendary image

--- a/Archive.html
+++ b/Archive.html
@@ -57,16 +57,16 @@
 								<li>Reflection</li>
 								<li>None Shall Sleep</li>
 								<li>The Magnolia Sword</li>-->
-								<li><a href="Sadie.html">Sadie</li>
+								<li><a href="archive-reviews/Sadie.html">Sadie</li>
 								<li><a href="main-reviews/1-inheritance.html">The Inheritance Games</a></li>
 								<li><a href="main-reviews/2-cemetery.html">Cemetery Boys</a></li>
-								<li><a href="Red.html">All Systems Red</li>
+								<li><a href="archive-reviews/Red.html">All Systems Red</li>
 								<li><a href="main-reviews/3-cerulean.html">The House in the Cerulean Sea</a></li>
-								<li><a href="caraval.html">Caraval</li>
-								<li><a href="legendary.html">Legendary</li>
+								<li><a href="archive-reviews/caraval.html">Caraval</li>
+								<li><a href="archive-reviews/legendary.html">Legendary</li>
 								<li><a href="main-reviews/4-rwrb.html">Red, White & Royal Blue</a></li>
 								<li><a href="main-reviews/5-whispering.html">Under the Whispering Door</a></li>
-								<li><a href="artificial.html">Artificial Condition</li>
+								<li><a href="archive-reviews/artificial.html">Artificial Condition</li>
 								<li><a href="main-reviews/6-sunbearer.html">The Sunbearer Trials</a></li>
 								<li><a href="main-reviews/7-katzenjammer.html">Katzenjammer</a></li>
 								<li><a href="main-reviews/8-neverwoods.html">Lost in the Never Woods</a></li>
