--- a/main-reviews/3-cerulean.html
+++ b/main-reviews/3-cerulean.html
@@ -21,7 +21,7 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="index.html" class="logo">
+								<a href="../index.html" class="logo">
 									<span class="symbol"><img src="../images/logo.svg" alt="" /></span><span class="title">Phantom</span>
 								</a>
 
@@ -39,9 +39,9 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Review Archive</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="../index.html">Home</a></li>
+							<li><a href="../generic.html">Review Archive</a></li>
+							<li><a href="../elements.html">Elements</a></li>
 						</ul>
 					</nav>
 
