Photos for review pages
Added my own photos for the review pages to the file and linked them all onto the correct pages.

Also added a comment to index.html for why I didn't kept the template images over my own photos

--- a/archive-reviews/legendary.html
+++ b/archive-reviews/legendary.html
@@ -49,7 +49,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Legendary by Stephanie Garber</h1>
-							<span class="image main"><img src="../images/pic13.jpg" alt="" /></span>
+							<span class="image main"><img src="../images/legendary.jpg" alt="" /></span>
 							
                             <section class="basics">
 							    <p>June 13, 2023 - June 21, 2023 </p>
