--- a/archive-reviews/sadie.html
+++ b/archive-reviews/sadie.html
@@ -49,7 +49,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Sadie by Courtney Summers</h1>
-							<span class="image main"><img src="../images/pic13.jpg" alt="" /></span>
+							<span class="image main"><img src="../images/sadie.jpg" alt="" /></span>
 							
                             <section class="basics">
 							    <p> April 7, 2023 - April 14, 2023 </p>
