--- a/main-reviews/12-hallowe'en.html
+++ b/main-reviews/12-hallowe'en.html
@@ -49,7 +49,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Hallowe'en Party by Agatha Christie</h1>
-							<span class="image main"><img src="../images/pic13.jpg" alt="" /></span>
+							<span class="image main"><img src="../images/hallowe'en.jpg" alt="" /></span>
 							
                             <section class="basics">
 							    <p> September 14, 2023 - September 19, 2023 </p>
