--- a/main-reviews/6-sunbearer.html
+++ b/main-reviews/6-sunbearer.html
@@ -49,7 +49,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>The Sunbearer Trials by Aiden Thomas</h1>
-							<span class="image main"><img src="../images/pic13.jpg" alt="" /></span>
+							<span class="image main"><img src="../images/sunbearer-cards.jpg" alt="" /></span>
 							
 							<section class="basics">
 								<p>June 30, 2023 - July 18, 2023</p>
