--- a/archive-reviews/artificial.html
+++ b/archive-reviews/artificial.html
@@ -49,7 +49,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Artificial Condition by Martha Wells</h1>
-							<span class="image main"><img src="../images/pic13.jpg" alt="" /></span>
+							<span class="image main"><img src="../images/artificial.jpg" alt="" /></span>
 							
                             <section class="basics">
 							    <p>June 29, 2023 </p>
