--- a/main-reviews/3-cerulean.html
+++ b/main-reviews/3-cerulean.html
@@ -49,7 +49,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>The House in the Cerulean Sea by TJ Klune</h1>
-							<span class="image main"><img src="../images/pic13.jpg" alt="" /></span>
+							<span class="image main"><img src="../images/cerulean-2.jpg" alt="" /></span>
 							
 							<section class="basics">
 								<p>June 5, 2023 - June 8, 2023</p>
