--- a/main-reviews/7-katzenjammer.html
+++ b/main-reviews/7-katzenjammer.html
@@ -49,7 +49,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Katzenjammer by Francesca Zappia</h1>
-							<span class="image main"><img src="../images/pic13.jpg" alt="" /></span>
+							<span class="image main"><img src="../images/katzenjammer-2.jpg" alt="" /></span>
 							
                             <section class="basics">
 							    <p> March 28, 2023 - July 25, 2023 </p>
