Elmo meme (3-cerulean.html)
Inserted Elmo meme & removed snippet from the comment so it now appears on the page

--- a/main-reviews/3-cerulean.html
+++ b/main-reviews/3-cerulean.html
@@ -58,16 +58,19 @@
                             	<p>Genre: Fantasy, Dystopian, Romance </p>
 							</section>
 
-							<!--Inserted favorite random snippet here. Not sure if I want to include or not.
-							Lucy, 6 yr old antichrist: "He's here to make sure I don't burn anyone alive with the power of my mind and then consume their souls from their smoking carcasses!"
-
-							J-Bone, stoned record shop worker: "Rock on, little dude!"		-TJ Klune, House in the Cerulean Sea
-							-->
 
                             <section class="update">
 								<h2> Update: 51% </h2>
-								<p>So far this book is so cute and I love all the kids, especially Lucy. He never fails to make me laugh and I’ve spent the whole time imagining him as that Elmo hellfire meme</p>
+								<section class="snippet">
+								<p>So far this book is so cute and I love all the kids, especially Lucy. He never fails to make me laugh and I’ve spent the whole time imagining him as that Elmo fire meme. For reference, here's a snippet that made me laugh so hard.</p>
+
+								<p>Lucy, 6 year old antichrist: "He's here to make sure I don't burn anyone alive with the power of my mind and then consume their souls from their smoking carcasses!"</p>
+								<p>J-Bone, stoned record shop worker: "Rock on, little dude!"</p>
+								<p>-TJ Klune, <em>The House in the Cerulean Sea</em></p>
+								</section>
+								<iframe src="https://giphy.com/embed/P7JmDW7IkB7TW" width="480" height="328" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/one-direction-zayn-malik-abhhhhhhhhhhhhhhhhhhhhhhhh-P7JmDW7IkB7TW">via GIPHY</a></p>
 								<!--Is there a way to link that meme?-->
+
 							</section>
 							
 							<section class="review">
