--- a/archive-reviews/legendary.html
+++ b/archive-reviews/legendary.html
@@ -53,8 +53,10 @@
 							
                             <section class="basics">
 							    <p>June 13, 2023 - June 21, 2023 </p>
-							    <p>Original Rating (2019): *5</p>
-                                <p>Re-Read (2023): *4</p>
+							    <p>Original rating (2019):<img class="star" src="../images/icons8-star-48.png">5</p>
+								<p class="star-link"><a class="star-link" target="_blank" href="https://icons8.com/icon/80355/star">Star</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>
+								<p>Re-Read (2023):<img class="star" src="../images/icons8-star-48.png">4</p>
+								<p class="star-link"><a class="star-link" target="_blank" href="https://icons8.com/icon/80355/star">Star</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>
 							    <p> Audiobook </p>
 							    <p> YA, Fantasy, Romance </p>
                             </section>
