--- a/main-reviews/7-katzenjammer.html
+++ b/main-reviews/7-katzenjammer.html
@@ -53,7 +53,8 @@
 							
                             <section class="basics">
 							    <p> March 28, 2023 - July 25, 2023 </p>
-							    <p>*1.5-2</p>
+							    <p><img class="star" src="../images/icons8-star-48.png">1.5-2</p>
+								<p class="star-link"><a class="star-link" target="_blank" href="https://icons8.com/icon/80355/star">Star</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>
 							    <p> Physical Book </p>
 							    <p> YA, horror, paranormal, fantasy </p>
                             </section>
