--- a/archive-reviews/caraval.html
+++ b/archive-reviews/caraval.html
@@ -54,7 +54,8 @@
                             <section class="basics">
 							    <p>June 12, 2023 - June 13, 2023 </p>
 							    <p>Original Rating (2017): *5</p>
-                                <p>Re-Read (2023): *3.5</p>
+                                <p><img class="star" src="../images/icons8-star-48.png">3.5</p>
+								<p class="star-link"><a class="star-link" target="_blank" href="https://icons8.com/icon/80355/star">Star</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>
 							    <p> Audiobook </p>
 							    <p> YA, Fantasy, Romance </p>
                             </section>
