--- a/archive-reviews/red.html
+++ b/archive-reviews/red.html
@@ -53,7 +53,8 @@
 							
                             <section class="basics">
 							    <p> June 8, 2023 </p>
-							    <p>*3.5</p>
+							    <p><img class="star" src="../images/icons8-star-48.png">3.5</p>
+								<p class="star-link"><a class="star-link" target="_blank" href="https://icons8.com/icon/80355/star">Star</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>
 							    <p> Audiobook </p>
 							    <p> Adult, SciFi, </p>
                             </section>
