--- a/archive-reviews/sadie.html
+++ b/archive-reviews/sadie.html
@@ -53,7 +53,8 @@
 							
                             <section class="basics">
 							    <p> April 7, 2023 - April 14, 2023 </p>
-							    <p>*4</p>
+							    <p><img class="star" src="../images/icons8-star-48.png">4</p>
+								<p class="star-link"><a class="star-link" target="_blank" href="https://icons8.com/icon/80355/star">Star</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>
 							    <p> Audiobook </p>
 							    <p> Crime, Mystery/Thriller, Contemporary </p>
                             </section>
