--- a/main-reviews/1-inheritance.html
+++ b/main-reviews/1-inheritance.html
@@ -53,7 +53,8 @@
 							
 							<section class="basics">
 								<p>May 3, 2023 - May 8, 2023</p>
-                            	<p>Rating: *2.5-3</p>
+                            	<p><img class="star" src="../images/icons8-star-48.png">2.5-3</p>
+								<p class="star-link"><a class="star-link" target="_blank" href="https://icons8.com/icon/80355/star">Star</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>
                             	<p> Audiobook </p>
                             	<p>Genre: YA, Mystery/Thriller, Contemporary </p>
 							</section>
