--- a/main-reviews/10-rot.html
+++ b/main-reviews/10-rot.html
@@ -53,7 +53,8 @@
 							
                             <section class="basics">
 								<p> September 5, 2023 - September 10, 2023 </p>
-								<p>*4.5</p>
+								<p><img class="star" src="../images/icons8-star-48.png">4.5</p>
+								<p class="star-link"><a class="star-link" target="_blank" href="https://icons8.com/icon/80355/star">Star</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>
 								<p> Audiobook </p>
 								<p> YA, fantasy, horror, paranormal </p>
                             </section>
