--- a/main-reviews/12-hallowe'en.html
+++ b/main-reviews/12-hallowe'en.html
@@ -53,7 +53,8 @@
 							
                             <section class="basics">
 							    <p> September 14, 2023 - September 19, 2023 </p>
-							    <p>*2.75</p>
+							    <p><img class="star" src="../images/icons8-star-48.png">2.5</p>
+								<p class="star-link"><a class="star-link" target="_blank" href="https://icons8.com/icon/80355/star">Star</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>
 							    <p> Audiobook </p>
 							    <p> Crime, Mystery/Thriller, Detective Fiction </p>
                             </section>
