--- a/main-reviews/2-cemetery.html
+++ b/main-reviews/2-cemetery.html
@@ -53,7 +53,8 @@
 							
 							<section class="basics">
 								<p>May 31, 2023 - June 5, 2023</p>
-                            	<p>Rating: *4</p>
+                            	<p><img class="star" src="../images/icons8-star-48.png">4</p>
+								<p class="star-link"><a class="star-link" target="_blank" href="https://icons8.com/icon/80355/star">Star</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>
                             	<p> Audiobook </p>
                             	<p>Genre: YA, Fantasy, Mythology, Paranormal, Romance </p>
 							</section>
