--- a/main-reviews/8-neverwoods.html
+++ b/main-reviews/8-neverwoods.html
@@ -53,7 +53,8 @@
 							
 							<section class="basics">
 								<p> July 21, 2023 - August 11, 2023 </p>
-								<p>*2.5</p>
+								<p><img class="star" src="../images/icons8-star-48.png">2.5</p>
+								<p class="star-link"><a class="star-link" target="_blank" href="https://icons8.com/icon/80355/star">Star</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>
 								<p> Audiobook </p>
 								<p> YA, fantasy, retelling </p>
 							</section>
