--- a/archive-reviews/caraval.html
+++ b/archive-reviews/caraval.html
@@ -84,18 +84,9 @@
                                     end. There’s only so many times Julian can lie to Scarlett and get a 
                                     new backstory before it gets old. 
                                     <details><summary>Spoilers</summary> 
-                                    He starts out as some sailor Tella uses to get off the island to Caraval, 
-                                    but he’s played before and sticks around to help Scarlett. Then she 
-                                    believes he’s Legend and involved with Rosa’s death. But wait he’s actually 
-                                    Rosa’s heartbroken brother working to get revenge on Legend. Except that’s 
-                                    also not true because he’s one of Legend’s players tasked with bringing her 
-                                    to Caraval and was everything they had a lie? Turns out he does like her 
-                                    and wants to try (now that he’s no longer dead) but by the way he’s 
-                                    Legend’s brother.</details> 
-                                    It’s too much.</p>
+                                    He starts out as some sailor Tella uses to get off the island to Caraval, but he’s played before and sticks around to help Scarlett. Then she believes he’s Legend and involved with Rosa’s death. But wait he’s actually Rosa’s heartbroken brother working to get revenge on Legend. Except that’s also not true because he’s one of Legend’s players tasked with bringing her to Caraval and was everything they had a lie? Turns out he does like her and wants to try (now that he’s no longer dead) but by the way he’s Legend’s brother.</details> It’s too much.</p>
                                              
-                                    <p>The ending plot twist with Tella was convoluted and I don't think the 
-                                    characters truly ackknowledge how messed up it was.
+                                    <p>The ending plot twist with Tella was convoluted and I don't think the characters truly ackknowledge how messed up it was.
                                     
                                     <details>
                                     <summary>Spoilers</summary>
@@ -118,6 +109,10 @@
 
                             </section>
 
+							<details class="trigger warning">
+                                <summary>Trigger Warnings</summary>
+                                <p>Mentions or depictions of:<br>death, blood, murder, child abuse, physical abuse, child abuse</p>
+                            </details>
 						</div>
 					</div>
 
