--- a/archive-reviews/red.html
+++ b/archive-reviews/red.html
@@ -62,9 +62,12 @@
                             <section class="review">
                                 <h2>Review</h2>
                                     <p>It’s been so long since I’ve read Sci-fi but this novella reminds me why I love it! All Systems Red is a short and fun adventure about exasperated Murderbot who has sadly been overcome with feelings for his dumb human clients and has to protect them rather than hiding in his room and binging. Sanctuary Moon. Murderbot’s deadpan and pessimistic narration brought a lot of humor to the story, though I was led to believe there might be a little more depth to the story. After looking at the synopsis for the next novella, I think that idea was more applied to the series as a whole rather than the first part. So slightly disappointed that it wasn't in this one but that just means I’m even more excited for the next one. (A pleasant surprise since I haven’t been able to commit to a full-length series since pre-pandemic).</p>
-
                             </section>
 
+							<details class="trigger warning">
+                                <summary>Trigger Warnings</summary>
+                                <p>Mentions or depictions of:<br>death, violence, gun violence, murder, injury</p>
+                            </details>
 						</div>
 					</div>
 
