--- a/main-reviews/1-inheritance.html
+++ b/main-reviews/1-inheritance.html
@@ -92,6 +92,10 @@
                             <p>It’s been about a month and after letting this book stew, reading some book two reviews, and ranting for an hour to a friend, I’ve come to two conclusions: my anger at the Emily plot line overshadows any of the good or okay parts and I will not be reading the sequel. I have no interest in love triangles, especially involving siblings or hypocrites. (I’m looking at you Grayson. “My family is the most important thing to me and I won’t let another girl come between us.” Yeah right.) Not to mention none of the 15 or so reviews I read mentioned Xander, so he’s clearly not a big part of the second bok. (And why is that? Xander was by far my favorite character!) Plus most of the clues were rather simple (filling in the idioms), had no answer (the random book in the library), or required being physically present and thus no real brain power (the number code and sundial puzzle). Not to mention the Emily of it all.</p>
 						   </section>
 
+						   <details class="trigger warning">
+							<summary>Trigger Warnings</summary>
+							<p>Mentions or depictions of:<br>death, domestic abuse, toxic relationship, gun violence</p>
+						</details>
 						</div>
 					</div>
 
