--- a/main-reviews/11-hide.html
+++ b/main-reviews/11-hide.html
@@ -70,6 +70,10 @@
                             
                             </section>
 
+							<details class="trigger warning">
+                                <summary>Trigger Warnings</summary>
+                                <p>Mentions or depictions of:<br>death, murder, violence, child death, suicide, homophobia, racism</p>
+                            </details>
 						</div>
 					</div>
 
