--- a/main-reviews/2-cemetery.html
+++ b/main-reviews/2-cemetery.html
@@ -56,7 +56,7 @@
                             	<p><img class="star" src="../images/icons8-star-48.png">4</p>
 								<p class="star-link"><a class="star-link" target="_blank" href="https://icons8.com/icon/80355/star">Star</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>
                             	<p> Audiobook </p>
-                            	<p>YA, Fantasy, Mythology, Paranormal, Romance </p>
+                            	<p>YA, Fantasy, Mythology, Paranormal, Romance, LGBT+ </p>
 							</section>
 
 							<section class="review">
@@ -69,6 +69,11 @@
                                         
                                 <p>I also just learned there’s plans for a sequel, this time from Julian’s pov and I am so incredibly excited.</p>
 							</section>
+
+							<details class="trigger warning">
+                                <summary>Trigger Warnings</summary>
+                                <p>Mentions or depictions of:<br>transphobia, blood, death, deadnaming, violence</p>
+                            </details>
 						</div>
 					</div>
 
