--- a/main-reviews/4-rwrb.html
+++ b/main-reviews/4-rwrb.html
@@ -56,7 +56,7 @@
                             	<p><img class="star" src="../images/icons8-star-48.png">4</p>
 								<p class="star-link"><a class="star-link" target="_blank" href="https://icons8.com/icon/80355/star">Star</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>
                             	<p> E-Book </p>
-                            	<p>Genre: Romance, Contemporary, YA/New Adult </p>
+                            	<p>New Adult, Romance, Contemporary, LGBT+ </p>
 							</section>
 
 							<section class="update">
@@ -68,6 +68,11 @@
 							<section class="review">
                                 <p>This book was so sweet and heartwarming! I don’t usually read contemporary novels or just plain romance novels (as in romance is the main plot instead of a subplot) but so many of my friends adore this book so I thought I’d give it a try. I’m so glad I did! I loved watching the development between Henry and Alex and all the romantic moments they had. I might have to start reading more romance novels.</p>
 							</section>
+
+							<details class="trigger warning">
+                                <summary>Trigger Warnings</summary>
+                                <p>Mentions or depictions of:<br>forced outing, homophobia, sexual content, sexual assault, drug abuse, racism</p>
+                            </details>
 						</div>
 					</div>
 
