--- a/main-reviews/7-katzenjammer.html
+++ b/main-reviews/7-katzenjammer.html
@@ -56,7 +56,7 @@
 							    <p><img class="star" src="../images/icons8-star-48.png">1.5-2</p>
 								<p class="star-link"><a class="star-link" target="_blank" href="https://icons8.com/icon/80355/star">Star</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>
 							    <p> Physical Book </p>
-							    <p> YA, horror, paranormal, fantasy </p>
+							    <p> YA, Horror, Paranormal, Fantasy </p>
                             </section>
 
 							<section class="review">
@@ -73,6 +73,15 @@
 								
 							    <p>Why was any of the horror timeline necessary? Again the reveal and Cat’s moving on to whatever comes next all occurs in the last 20 pages. I guess it could be her brain’s way of processing what happened (but then why the personification of school? The transformation of the other students? A physical marker of their outcast status like they were in life? Why the brutal fight between the outcasts and the Admin kids? Yeah they were bullies but they were killed by Ryan/Laserbeams) Maybe it’s her guilt? But then why only introduce these themes at the very end of the book? The whole balance between the depravity/violence of humans and accepting/moving on is completely off. It feels like there’s no resolution at all. Which I could kind of understand if Zappia is trying to illustrate the experience of people connected to school shootings because it is abrupt and there aren’t reasons and it must be difficult to find any sort of closure or resolution after such violence. But we have a few (very small chapters) rushing through Cat’s acceptance and her moving on in death. If you’re going to include that, why not give her and the readers time to experience that process. We hardly see any awareness or understanding seep from the memories into present Cat. They just collide at the very end and Cat says she remembers and does as the little girl asks. It’s jarring and confusing and does not fit with the direction the narrative takes nor does it fit with the split timelines we have been experiencing through the rest of the book.</p>
                             </section>
+
+							<details class="trigger warning">
+                                <summary>Trigger Warnings</summary>
+                                <p>Mentions or depictions of:<br> bullying, gore, violence, eating disorder, gun violence, body horror, hanging</p>
+                            </details>
+							<details class="trigger warning">
+								<summary>Trigger Warning (Major Spoiler/Plot Twist)</summary>
+								<p>mass/school shooting</p>
+							</details>
 						</div>
 					</div>
 
