--- a/main-reviews/9-girl.html
+++ b/main-reviews/9-girl.html
@@ -81,6 +81,10 @@
                             
                             </section>
 
+							<details class="trigger warning">
+                                <summary>Trigger Warnings</summary>
+                                <p>Mentions or depictions of:<br> death, child death, blood, violence, grief, injury, war</p>
+                            </details>
 						</div>
 					</div>
 
