--- a/main-reviews/10-rot.html
+++ b/main-reviews/10-rot.html
@@ -79,6 +79,10 @@
                             
                             </section>
 
+							<details class="trigger warning">
+                                <summary>Trigger Warnings</summary>
+                                <p>Mentions or depictions of:<br> animal death/cruelty, body horror, child abuse, religious abuse, alcoholsim, gore, police brutality, stalking, pregnancy</p>
+                            </details>
 						</div>
 					</div>
 
