--- a/main-reviews/12-hallowe'en.html
+++ b/main-reviews/12-hallowe'en.html
@@ -65,6 +65,10 @@
                             
                             </section>
 
+							<details class="trigger warning">
+                                <summary>Trigger Warnings</summary>
+                                <p>Mentions or depictions of:<br>child death, murder, death, xenophobia, suicide</p>
+                            </details>
 						</div>
 					</div>
 
