--- a/main-reviews/5-whispering.html
+++ b/main-reviews/5-whispering.html
@@ -56,13 +56,18 @@
                             	<p><img class="star" src="../images/icons8-star-48.png">4</p>
 								<p class="star-link"><a class="star-link" target="_blank" href="https://icons8.com/icon/80355/star">Star</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>
                             	<p> Audiobook </p>
-                            	<p>Genre: Adult, Fantasy, Paranormal, Romance </p>
+                            	<p>Adult, Fantasy, Paranormal, Romance, LGBT+ </p>
 							</section>
 
 							<section class="review">
 								<h2>Review</h2>
                                 <p>Once again a fantastic book by TJ Klune. His narrators and characters all have such vibrant personalities. As soon as I started I knew I was going to love Wallace as much as I hated him because yes he’s awful in the beginning, but he has such a distinctive voice as well. I was having such fun with the characters I completely forgot about the week-long deadline until it showed up near the end (minor spoiler, I guess?) So much of this book is Wallace learning and growing, making connections with Hugo and Nelson and Mei, and adapting to the day-to-day life of Charon’s Crossing. There isn’t much of a plot until the back end of the book and usually that drives me crazy. But I enjoyed this book so much I hardly noticed (though once I did, the tension, questions, and emotional turmoil from the plot kicking in made up for my ensuing apprehension.)</p>
 							</section>
+
+							<details class="trigger warning">
+                                <summary>Trigger Warnings</summary>
+                                <p>Mentions or depictions of:<br>death, grief, suicide, child death, murder, animal death</p>
+                            </details>
 						</div>
 					</div>
 
