--- a/main-reviews/6-sunbearer.html
+++ b/main-reviews/6-sunbearer.html
@@ -56,7 +56,7 @@
                             	<p><img class="star" src="../images/icons8-star-48.png">4</p>
 								<p class="star-link"><a class="star-link" target="_blank" href="https://icons8.com/icon/80355/star">Star</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>
                             	<p> Ebook </p>
-                            	<p>Genre: YA, Fantasy, Mythology</p>
+                            	<p>YA, Fantasy, Mythology, LGBT+</p>
 							</section>
 
                             <section class="review">
@@ -73,6 +73,11 @@
                                         
                                 <p>(Also just had a final thought about the ending. While I love the direction it’s taking, the final chapter would’ve fit much better as the beginning of the second book. The second to last chapter, while certainly not a resolution, feels much more like the end of the first in a series and has enough of a cliffhanger to leave you wanting more. The last chapter is a bit jarring because we get the start of a quest to fix what went wrong but I just ends instead of continuing)</p>
 							</section>
+
+							<details class="trigger warning">
+                                <summary>Trigger Warnings</summary>
+                                <p>Mentions or depictions of:<br>violence, bullying, blood, dysphoria, child abuse, child death, death, fire/burns</p>
+                            </details>
 						</div>
 					</div>
 
